--- a/_posts/06.OpenCV/01.OpenCv/2023-10-13-01.OpenCv_이미지읽기.md
+++ b/_posts/06.OpenCV/01.OpenCv/2023-10-13-01.OpenCv_이미지읽기.md
@@ -75,6 +75,12 @@ print(img2.shape)
 # ( height, width) => channel 없음 ==> Gray Scale (흑백조-흑백)
 ```
 
+```python
+(222, 296)
+```
+
+
+
 
 ```python
 cv2.imshow('frame', img2)
@@ -105,6 +111,10 @@ plt.imshow(img2, cmap='gray')
 plt.axis('off');
 ```
 
+![output_14_0](/../../images/2023-10-13-01.OpenCv_이미지읽기/output_14_0.png)
+
+
+
 
 ```python
 # matplotlib -> RGB
@@ -115,3 +125,4 @@ plt.imshow(img[:, :, ::-1]);
 
 
 
+![output_15_0](/../../images/2023-10-13-01.OpenCv_이미지읽기/output_15_0.png)
