--- a/_posts/06.OpenCV/01.OpenCv/2023-10-13-02.색공간변환.md
+++ b/_posts/06.OpenCV/01.OpenCv/2023-10-13-02.색공간변환.md
@@ -45,6 +45,10 @@ plt.imshow(img_rgb);
 
 
 
+![output_20_0](/../../images/2023-10-13-02.색공간변환/output_20_0.png)
+
+
+
 > ### HSV 색공간
 > - Hue: 색상, 색의 종류
 > - Saturation: 채도. 색의 선명도
