--- a/_posts/06.OpenCV/02.기본영상처리/2023-10-13-01.히스토그램.md
+++ b/_posts/06.OpenCV/02.기본영상처리/2023-10-13-01.히스토그램.md
@@ -33,7 +33,7 @@ plt.imshow(img, cmap='gray');
 ```
 
 
-![output_4_0](/../../../Hinya - Github/images/2023-10-13-00.기본 영상처리/output_4_0.png)
+![output_4_0](/../../images/2023-10-13-01.히스토그램/output_4_0.png)
     
 
 
@@ -82,7 +82,7 @@ plt.show()
 ```
 
 
-![output_7_0](/../../../Hinya - Github/images/2023-10-13-00.기본 영상처리/output_7_0.png)
+![output_8_0](/../../images/2023-10-13-01.히스토그램/output_8_0.png)
     
 
 
@@ -136,4 +136,4 @@ plt.show()
 ```
 
 
-![output_13_0](/../../../Hinya - Github/images/2023-10-13-00.기본 영상처리/output_13_0.png)
+![output_14_0](/../../images/2023-10-13-01.히스토그램/output_14_0.png)
