--- a/_posts/06.OpenCV/02.기본영상처리/2023-10-13-02.밝기조절(Brightness).md
+++ b/_posts/06.OpenCV/02.기본영상처리/2023-10-13-02.밝기조절(Brightness).md
@@ -68,7 +68,7 @@ plt.show()
 
 
 
-![output_19_0](/../../../Hinya - Github/images/2023-10-13-00.기본 영상처리/output_19_0.png)
+![output_20_1](/../../images/2023-10-13-02.밝기조절(Brightness)/output_20_1.png)
     
 
 
@@ -103,7 +103,7 @@ plt.show()
 ```
 
 
-![output_21_0](/../../../Hinya - Github/images/2023-10-13-00.기본 영상처리/output_21_0.png)
+![output_22_0](/../../images/2023-10-13-02.밝기조절(Brightness)/output_22_0.png)
     
 
 
