--- a/_posts/06.OpenCV/02.기본영상처리/2023-10-13-03.명암비(Contrast).md
+++ b/_posts/06.OpenCV/02.기본영상처리/2023-10-13-03.명암비(Contrast).md
@@ -60,7 +60,7 @@ plt.show()
 ```
 
 
-![output_31_0](/../../../Hinya - Github/images/2023-10-13-00.기본 영상처리/output_31_0.png)
+![output_32_0](/../../images/2023-10-13-03.명암비(Contrast)/output_32_0.png)
     
 
 
@@ -100,7 +100,7 @@ plt.show()
 ```
 
 
-![output_33_0](/../../../Hinya - Github/images/2023-10-13-00.기본 영상처리/output_33_0.png)
+![output_34_0](/../../images/2023-10-13-03.명암비(Contrast)/output_34_0.png)
     
 
 
@@ -141,5 +141,5 @@ plt.show()
 ```
 
 
-![output_37_0](/../../../Hinya - Github/images/2023-10-13-00.기본 영상처리/output_37_0.png)
+![output_38_0](/../../images/2023-10-13-03.명암비(Contrast)/output_38_0.png)
 
