--- a/_posts/06.OpenCV/02.기본영상처리/2023-10-13-04.Fillter.md
+++ b/_posts/06.OpenCV/02.기본영상처리/2023-10-13-04.Fillter.md
@@ -65,9 +65,8 @@ plt.show()
 ```
 
 
-​    
-![png](output_48_0.png)
-​    
+![output_48_0](/../../images/2023-10-13-04.Fillter/output_48_0.png)
+    
 
 
 
@@ -79,9 +78,8 @@ plt.show()
 ```
 
 
-​    
-![png](output_49_0.png)
-​    
+![output_49_0](/../../images/2023-10-13-04.Fillter/output_49_0.png)
+    
 
 
 
