--- a/_posts/06.OpenCV/02.기본영상처리/2023-10-13-06.샤프닝(Sharpen).md
+++ b/_posts/06.OpenCV/02.기본영상처리/2023-10-13-06.샤프닝(Sharpen).md
@@ -74,9 +74,8 @@ plt.show()
 ```
 
 
-​    
-![png](output_70_0.png)
-​    
+![output_70_0](/../../images/2023-10-13-06.샤프닝(Sharpen)/output_70_0.png)
+    
 
 
 
@@ -120,7 +119,7 @@ plt.show()
 
 
 ​    
-![png](output_73_0.png)
+![output_73_0](/../../images/2023-10-13-06.샤프닝(Sharpen)/output_73_0.png)
 ​    
 
 
