--- a/_posts/06.OpenCV/03.도형그리기 이미지이동/2023-10-13-05.회전(Rotate).md
+++ b/_posts/06.OpenCV/03.도형그리기 이미지이동/2023-10-13-05.회전(Rotate).md
@@ -62,9 +62,8 @@ plt.show()
 ```
 
 
-​    
-![png](output_35_0.png)
-​    
+![output_35_0](/../../images/2023-10-13-05.회전(Rotate)/output_35_0.png)
+    
 
 
 
@@ -112,6 +111,6 @@ plt.show()
 
 
 ​    
-![png](output_37_0.png)
+![output_37_0](/../../images/2023-10-13-05.회전(Rotate)/output_37_0.png)
 ​    
 
