--- a/_posts/06.OpenCV/01.OpenCv/2023-10-13-03.OpenCv_이미지출력.md
+++ b/_posts/06.OpenCV/01.OpenCv/2023-10-13-03.OpenCv_이미지출력.md
@@ -55,6 +55,12 @@ print(v)
 cv2.destroyAllWindows()
 ```
 
+```python
+27
+```
+
+
+
 ### 특정 키를 입력했을 때 종료
 
 
@@ -90,3 +96,8 @@ cv2.imwrite('output/img1.jpg', img1)
 cv2.imwrite('output/img2.jpg', img2)
 cv2.imwrite('output/img3.jpg', img3)
 ```
+
+```python
+True
+```
+
