--- a/_posts/06.OpenCV/02.기본영상처리/2023-10-13-05.GaussianBlur.md
+++ b/_posts/06.OpenCV/02.기본영상처리/2023-10-13-05.GaussianBlur.md
@@ -89,9 +89,8 @@ plt.show()
 ```
 
 
-​    
-![png](output_61_0.png)
-​    
+![output_61_0](/../../images/2023-10-13-05.GaussianBlur/output_61_0.png)
+    
 
 
 
@@ -108,8 +107,6 @@ plt.show()
 ```
 
 
-​    
-![png](output_62_0.png)
-​    
-
+![output_62_0](/../../images/2023-10-13-05.GaussianBlur/output_62_0.png)
+    
 
