--- a/_posts/03.Pandas/01.Pandas_Series/2023-10-11-02.Series원소 Indexing과 Slicing.md
+++ b/_posts/03.Pandas/01.Pandas_Series/2023-10-11-02.Series원소 Indexing과 Slicing.md
@@ -11,7 +11,6 @@ toc: true
 # Series안 원소(element) 접근 - Indexing과 Slicing
 
 - Index는 Series에 저장된 각 원소를 구분하는 식별자로 각 원소를 사용할때 사용한다. 
-  
 - Series의 원소들은 두 종류의 index를 가진다.
   
     1. **index(순번)**
@@ -24,6 +23,12 @@ toc: true
         - **딕셔너리의 key**의 역할을 한다.
             - Series의 index name은 중복될 수 있다. 
         - 생략하면 양수 index가 index name이 된다.
+
+```python
+import pandas as pd
+```
+
+
 
 
 ```python
