--- a/_posts/03.Pandas/06.DataFrame 재구조화/2023-10-11-04.Pivot.md
+++ b/_posts/03.Pandas/06.DataFrame 재구조화/2023-10-11-04.Pivot.md
@@ -17,6 +17,13 @@ toc: true
 - **columns**: 문자열. 컬럼명으로 사용할 컬럼
 - **values** : Value에 올 컬럼명
 
+```python
+import pandas as pd
+import numpy as np
+```
+
+
+
 
 ```python
 df3.columns=['State','Fruit','Count']
