--- a/_posts/05.Numpy/02.Numpy 원소,배열,연산/2023-10-13-05.Np.Any와 Np.All.md
+++ b/_posts/05.Numpy/02.Numpy 원소,배열,연산/2023-10-13-05.Np.Any와 Np.All.md
@@ -74,13 +74,13 @@ np.any(arr > 0)
 
     True
 
-### 
 
-## 특정 조건이 True인 값들을 조회 -> boolean indexing
 
-## 특정 조건이 True인 값들의 index -> np.where()
+### 특정 조건이 True인 값들을 조회 -> boolean indexing
 
-## 특정 조건의 값이 하나라도 있는지 -> np.any()
+### 특정 조건이 True인 값들의 index -> np.where()
 
-## 모든 값들이 특정 조건을 만족하는지(True) -> np.all()
+### 특정 조건의 값이 하나라도 있는지 -> np.any()
+
+### 모든 값들이 특정 조건을 만족하는지(True) -> np.all()
 
