--- a/_posts/07.Deeplearning_Pyorch/05_신경망 구조.md
+++ b/_posts/07.Deeplearning_Pyorch/05_신경망 구조.md
@@ -1,3 +1,12 @@
+---
+layout: single
+title: '도형 그리기'
+typora-root-url: ../
+categories: Pytorch.05.NeralNetwork
+tag: Pytorch
+toc: true
+---
+
 # DNN (Deep Neural Network)
 == MLP (Multi Layer Perceptron) == ANM(Artificial Neural Netework) == 선형회귀 함수를 사용.
 ## 신경망 구성요소
