--- a/_posts/07.Deeplearning_Pyorch/03.GradientDecending/2023-10-14-03.gradient_decending.md
+++ b/_posts/07.Deeplearning_Pyorch/03.GradientDecending/2023-10-14-03.gradient_decending.md
@@ -50,7 +50,7 @@ $$
     - gradient가 양수이면 loss와 weight가 비례관계란 의미이므로 loss를 더 작게 하려면 weight가 작아져야 한다.    
     - gradient가 음수이면 loss와 weight가 반비례관계란 의미이므로 loss를 더 작게 하려면 weight가 커져야 한다.
 
-![image.png](image.png)
+![image](/../../images/2023-10-14-03.gradient_decending/image.png)
 
 ### 파라미터 조정 -> 경사하강법
 
@@ -93,7 +93,7 @@ print('w=1, 기울기:', derived_loss(1))
 
     w=1, 오차: 2
     w=1, 기울기: 0
-    
+
 
 
 ```python
@@ -253,5 +253,4 @@ weight_list
      23997878253756106444997335735942416102218125380085922630082242,
      -455959686821366022454949378982905905942144382221632529971562578,
      8663234049605954426644038200675212212900743262211018069459689002]
-
 
