--- a/_posts/07.Deeplearning_Pyorch/04.딥러닝 MLP구현/2023-10-14-04.첫번째 딥러닝-MLP 구현.md
+++ b/_posts/07.Deeplearning_Pyorch/04.딥러닝 MLP구현/2023-10-14-04.첫번째 딥러닝-MLP 구현.md
@@ -22,7 +22,6 @@ toc: true
         - inializer에서 필요한 layer들을 생성한다.
         - forward(self, X) 메소드에 forward propagation 계산을 구현한다.
     
-
 3. **train**
     - train 함수, test 함수 정의
 
@@ -57,7 +56,7 @@ print('Pytorch version:', torch.__version__)
 ```
 
     Pytorch version: 2.1.0+cpu
-    
+
 
 ### device 설정
 
@@ -69,7 +68,7 @@ print('device', device)
 ```
 
     device cpu
-    
+
 
 ### 변수 설정
 
@@ -149,7 +148,7 @@ print(test_set)
         Split: Test
         StandardTransform
     Transform: ToTensor()
-    
+
 
 
 ```python
@@ -158,7 +157,7 @@ print(len(train_set), len(test_set))
 ```
 
     60000 10000
-    
+
 
 ### DataLoader
 
@@ -186,7 +185,7 @@ print('testset:', len(test_loader))
     1 에폭당 step 수
     trainset: 234
     testset: 40
-    
+
 
 
 ```python
@@ -282,7 +281,7 @@ print(model)
       (lr3): Linear(in_features=64, out_features=10, bias=True)
       (relu): ReLU()
     )
-    
+
 
 
 ```python
@@ -292,7 +291,7 @@ print(model)
 ```
 
     Requirement already satisfied: torchinfo in c:\users\world\anaconda3\envs\torch\lib\site-packages (1.8.0)
-    
+
 
 
 ```python
@@ -342,7 +341,7 @@ print(x_batch.shape, y_batch.shape)
 ```
 
     torch.Size([256, 1, 28, 28]) torch.Size([256])
-    
+
 
 
 ```python
@@ -481,7 +480,7 @@ print(f"학습에 걸린시간: {end - start}초")
 ```
 
     학습에 걸린시간: 0.0초
-    
+
 
 
 ```python
@@ -602,7 +601,7 @@ print(f"학습에 걸린시간: {end - start}초")
     [19/20] Train Loss: 0.005427892478809764, val Loss:0.09047829899166118, Val Accuracy: 0.9772
     [20/20] Train Loss: 0.004022062631621439, val Loss:0.09804597115389697, Val Accuracy: 0.9762
     학습에 걸린시간: 236.8289771080017초
-    
+
 
 ### 학습 로그 시각화
 
@@ -626,8 +625,7 @@ plt.show()
 ```
 
 
-    
-![png](output_46_0.png)
+![output_46_0](/../../images/2023-10-14-04.첫번째 딥러닝-MLP 구현/output_46_0.png)
     
 
 
@@ -644,7 +642,7 @@ print(save_file_path)
 ```
 
     models\mnist\mnist_mlp.pth
-    
+
 
 
 ```python
@@ -730,7 +728,7 @@ print(f'Test loss: {test_loss}, Test accuracy: {test_acc}')
 ```
 
     Test loss: 0.09804597115389697, Test accuracy: 0.9762
-    
+
 
 ## 새로운 데이터 추론
 
@@ -747,7 +745,7 @@ print(f'Test loss: {test_loss}, Test accuracy: {test_acc}')
     Using cached opencv_contrib_python-4.8.1.78-cp37-abi3-win_amd64.whl (44.8 MB)
     Installing collected packages: opencv-contrib-python
     Successfully installed opencv-contrib-python-4.8.1.78
-    
+
 
 
 ```python
@@ -802,7 +800,7 @@ for i in range(file_cnt):
 
     개수: 10
     torch.Size([10, 28, 28])
-    
+
 
 
 ```python
@@ -814,7 +812,7 @@ print(input_tensor.min(), input_tensor.max()) # 정규화
     <class 'torch.Tensor'>
     torch.Size([10, 28, 28])
     tensor(0.) tensor(1.)
-    
+
 
 
 ```python
@@ -836,7 +834,7 @@ print(pred_new.shape, pred_proba.shape)
 ```
 
     torch.Size([10, 10]) torch.Size([10, 10])
-    
+
 
 
 ```python
@@ -905,9 +903,9 @@ plt.show()
 ```
 
 
-    
-![png](output_67_0.png)
-    
+​    
+![output_67_0](/../../images/2023-10-14-04.첫번째 딥러닝-MLP 구현/output_67_0.png)
+​    
 
 
 
@@ -920,5 +918,4 @@ plt.show()
 
 
     0.6
-
 
