--- a/_posts/07.Deeplearning_Pyorch/05.신경망 구조/2023-10-14-05.신경망 구조.md
+++ b/_posts/07.Deeplearning_Pyorch/05.신경망 구조/2023-10-14-05.신경망 구조.md
@@ -30,7 +30,8 @@ toc: true
     - Output layer(출력층)의 Unit들은 추론 결과를 출력한다.
 - Input data의 Feature들에 Weight(가중치)를 곱하고 bias(편향)을 더한 결과를 Activation 함수에 넣어 출력하는 계산을 처리한다.
 - 
-    
+  
+
 ![04_neuron](figures/04_neuron.png)
 
 - **Input vector(입력값)**: $\large\mathbb x=(x_1, x_2, x_3)^T$
@@ -120,10 +121,9 @@ toc: true
     - $-1<tanh(z)<1$
 - Output이 0을 중심으로 분포하므로 sigmoid보다 학습에 효율 적이다.
 - 기울기 소실(Gradient Vanishing) 문제를 발생시킨다.
-    
-
+  
 - ### ReLU(Rectified Linear Unit)
-![image-2.png](image-2.png)
+![image-2](/../../images/2023-10-14-05.신경망 구조/image-2.png)
 
 $$\large  ReLU(z)=max(0,z)$$
     
@@ -131,14 +131,15 @@ $$\large  ReLU(z)=max(0,z)$$
     - 0이하의 값(z <= 0)들에 대해 뉴런이 죽는 단점이 있다. (Dying ReLU)
 
 - ### Leaky ReLU
-    ![image-4.png](image-4.png)
+    ![image-4](/../../images/2023-10-14-05.신경망 구조/image-4.png)
     <br><br>
      $$\large  LeakyReLU(z)=max(\alpha z,z)\\
      0< \alpha <1$$
     <br><br>
+    
     - ReLU의 Dying ReLU 현상을 해결하기 위해 나온 함수
     - 음수 z를 0으로 반환하지 않고 alpah (0 ~ 1 사이 실수)를 곱해 반환한다. 
-
+    
 - ### Softmax
     $$\large  Softmax(z_j) = \frac{exp(z_j)}{\sum_{k=1}^K exp(z_k)}\\ \:j=1,2, \ldots, K$$
     - **Multi-class classification(다중 분류)를 위한 네트워크의 Output layer(출력층)의 활성함수로 주로 사용된다.** 
@@ -178,7 +179,7 @@ print('완벽하게 틀렸을때:', -np.log(0.00000000000000001))
 
     완벽하게 맞혔을때: -0.0
     완벽하게 틀렸을때: 39.14394658089878
-    
+
 
 
 ```python
@@ -195,8 +196,7 @@ plt.show()
 ```
 
 
-    
-![png](output_24_0.png)
+![output_24_0](/../../images/2023-10-14-05.신경망 구조/output_24_0.png)
     
 
 
@@ -264,7 +264,8 @@ y[0] - y[1]
     - Training 시 Loss function이 출력하는 값을 줄이기 위해 파라미터(weight, bias)를 update 과정을 **최적화(Optimization)** 이라고 한다.
 - ### Gradient Decent(경사하강법)
     - 최적화를 위해 파라미터들에 대한 Loss function의 Gradient값을 구해 Gradient의 반대 방향으로 일정크기 만큼 파라미터들을 업데이트 하는 것을 경사하강법이라고 한다.
-        
+      
+
 $$\large W_{new} = W-\alpha\frac{\partial}{\partial {W}}Loss(W)\\W: 파라미터\: \alpha:학습률$$
 
 
@@ -320,7 +321,7 @@ result
 ```
 
     1100
-    
+
 
 
 
@@ -401,7 +402,7 @@ $$
     - **Adam**
         - Adagrad와 RMSProp을 합친 방식
 
-![image.png](image.png)
+![image](/../../images/2023-10-14-05.신경망 구조/image.png)
 <center>[출처] https://www.slideshare.net/yongho/ss-79607172</center>
 
 - **API**
