Update 07_모델저장_문제 유형별 모델 생성.md

--- a/_posts/07.Deeplearning_Pyorch/07_모델저장_문제 유형별 모델 생성.md
+++ b/_posts/07.Deeplearning_Pyorch/07_모델저장_문제 유형별 모델 생성.md
@@ -1,3 +1,11 @@
+layout: single
+title: 'Dataset을 이용 CSV파일에 저장된 데이터셋 로딩'
+typora-root-url: ../
+categories: Deeplearning_Pytorch.05.DatasetDataLoader
+tag: Pytorch
+toc: true
+
+
 - 공통
     - input layer(첫번째): in_features - 입력데이터의 feature(속성)개수에 맞춰준다.
     - hidden layer -> 알아서(감-art). Linear -> feature수를 줄여나간다.(핵심특성들을 추출해 나가는 과정의 개념)
