--- a/_posts/07.Deeplearning_Pyorch/02.모델 구현/2023-10-14-02.모델 다중 입력_출력.md
+++ b/_posts/07.Deeplearning_Pyorch/02.모델 구현/2023-10-14-02.모델 다중 입력_출력.md
@@ -1,295 +1,18 @@
 ---
 layout: single
-title: '도형 그리기'
+title: '모델 다중 입력/출력'
 typora-root-url: ../
-categories: Pytorch.02.LinearRegression
+categories: Deeplearning_Pytorch.02.모델 다중 입력/출력
 tag: Pytorch
 toc: true
 ---
 
-# LinearRegression from Scratch
-
-
-# 구현할 것
-- 공부시간과 성적간의 관계를 모델링한다.
-    - **머신러닝 모델(모형)이란** 수집한 데이터를 기반으로 입력값(Feature)와 출력값(Target)간의 관계를 하나의 공식으로 정의한 함수이다. 그 공식을 찾는 과정을 **모델링**이라고 한다.
-    - 이 예제에서는 공부한 시간으로 점수를 예측하는 모델을 정의한다.
-    - 입력값과 출력값 간의 관계를 정의할 수있는 다양한 함수(공식)이 있다. 여기에서는 딥러닝과 관계가 있는 **Linear Regression** 을 사용해본다.
-
-# 데이터 확인
-- 입력데이터: 공부시간
-- 출력데이터: 성적
-
-|공부시간|점수|
-|-|-|
-|1|20|
-|2|40|
-|3|60|
-
-우리가 수집한 공부시간과 점수 데이터를 바탕으로 둘 간의 관계를 식으로 정의 할 수 있으면 **내가 몇시간 공부하면 점수를 얼마 받을 수 있는지 예측할 수 있게 된다.**   
-수집한 데이터를 기반으로 앞으로 예측할 수있는 모형을 만드는 것이 머신러닝 모델링이다.
-
-
-
-## 학습(훈련) 데이터셋 만들기
-- 모델을 학습시키기 위한 데이터셋을 구성한다.
-- 입력데이터와 출력데이터을 따로 행렬로 구성한다.
-- 같은 데이터 포인트의 입력, 출력 데이터를 같은 index에 정의한다.
-
-# 모델링
-
-## 모델 정의
-
-- Feature와 Target간의 관계를 수식으로 정의한다.
-- 여기서는 공부시간(Feature)와 점수(Target)간의 관계를 정의하는데 **선형회귀(Linear Regression) 모델** 을 가설로 세우고 모델링을 한다.
-    - 많은 머신러닝 연구자들이 다양한 종류의 데이터에 관계를 예측할 수 있는 여러 알고리즘을 연구했다.
-    - 선형회귀 모델은 입력데이터와 출력데이터가 선형관계(비례 또는 반비례 관계)일때 좋은 성능을 나타낸다.
-  
-> ### 가설
-> - 아직은 이 식이 맞는지 틀린지는 알 수없기 때문에 **이 식을 가설(hypothesis) 라고 한다.**
-> - 가설을 세우고 모델링을 한 뒤 검증을 해서 좋은 예측결과를 내면 그 가설을 최종 결과 모델로 결정한다. 예측결과가 좋지 않을 경우 새로운 가설로 모델링을 한다.
- 
-  
-
-### 선형회귀 (Linear Regression)
-- Feature들의 가중합을 이용해 Target을 추정한다.
-- Feature에 곱해지는 가중치(weight)들은 각 Feature가 Target 얼마나 영향을 주는지 영향도가 된다.
-    - 음수일 경우는 target값을 줄이고 양수일 경우는 target값을 늘린다.
-    - 가중치가 0에 가까울 수록 target에 영향을 주지 않는 feature이고 0에서 멀수록 target에 많은 영향을 주는 target이 된다.
-- 모델 학습과정에서 가장 적절한 Feature의 가중치를 찾아야 한다.
-      
- 
-$$
-\hat{y} = Wx + b
-$$
-<center>$\hat{y}$: 모델추정값<br>W: 가중치<br>x: Feature<br>b: bias(편향)</center>
-
-
-## [경사하강법을 이용한 최적화](03_2_gradient_decending.ipynb)
-
-
-
-
-```python
-import torch
-```
-
-
-```python
-# 훈련(train)데이터 정의
-## 입력데이터 변수명: X, 출력데이터 변수명: y
-X_train = torch.tensor([[1],[2],[3]], dtype=torch.float32)
-y_train = torch.tensor([[20],[40],[60]], dtype=torch.float32)
-```
-
-
-```python
-print(X_train.shape, y_train.shape)
-# [3, 1] -> [데이터개수, 개별데이터의 shape] => 3개의 데이터. 각데이터는 1개의 값을 구성된 1차원 배열
-```
-
-    torch.Size([3, 1]) torch.Size([3, 1])
-    
-
-
-```python
-#### 모델정의
-torch.manual_seed(0)
-
-## weight와 bias를 정의
-weight = torch.rand(1, 1, requires_grad=True) # (1: 입력 값의개수, 1: 출력 값의개수)
-bias = torch.rand(1, requires_grad=True)
-
-print('초기 파라미터')
-print('weight:', weight)
-print('bias:', bias)
-
-def linear_model(X):
-    pred = X @ weight + bias
-    return pred
-```
-
-    초기 파라미터
-    weight: tensor([[0.4963]], requires_grad=True)
-    bias: tensor([0.7682], requires_grad=True)
-    
-
-
-```python
-### 예측
-pred_train = linear_model(X_train)
-pred_train
-```
-
-
-
-
-    tensor([[1.2645],
-            [1.7607],
-            [2.2570]], grad_fn=<AddBackward0>)
-
-
-
-
-```python
-# 실제 점수
-y_train
-```
-
-
-
-
-    tensor([[20.],
-            [40.],
-            [60.]])
-
-
-
-
-```python
-### 오차함수 정의 -> 모델이 추론한 값과 정답사이의 차이를 계산하는 함수
-# 평균 제곱 오차 (Mean Squared Error : MSE)
-def mse_loss_fn(pred:'예측값', y:'정답'):
-    return torch.mean((pred - y)**2)
-```
-
-
-```python
-loss = mse_loss_fn(pred_train, y_train)
-print('오차:', loss)
-```
-
-    오차: tensor(1715.8387, grad_fn=<MeanBackward0>)
-    
-
-
-```python
-### weight와 bias에 대한 gradient 계산
-loss.backward()
-```
-
-
-```python
-print('weight의 grad:', weight.grad)
-print('bias의 grad', bias.grad)
-```
-
-    weight의 grad: tensor([[-178.9621]])
-    bias의 grad tensor([-76.4785])
-    
-
-
-```python
-### 최적화 -> 경사하강법 ==> 파이토치의 함수를 사용
-optimizer = torch.optim.SGD([weight, bias], # 최적화할 대상 => requires_grad=True
-                            lr = 0.001,     # 학습률                           
-                           )
-### 경사하강법 연산.
-print('Udate전 weight:', weight)
-optimizer.step()
-print('Udate후 weight:', weight)
-optimizer.zero_grad()
-```
-
-    Udate전 weight: tensor([[0.4963]], requires_grad=True)
-    Udate후 weight: tensor([[0.6752]], requires_grad=True)
-    
-
-
-```python
-#### 업데이트후 로스계산
-## 추론
-pred = linear_model(X_train)
-## 오차계산
-loss2 = mse_loss_fn(pred, y_train)
-print('이전', loss)
-print('업데이트후', loss2)
-```
-
-    이전 tensor(1715.8387, grad_fn=<MeanBackward0>)
-    업데이트후 tensor(1678.1724, grad_fn=<MeanBackward0>)
-    
-
-### 학습
-1. 모델을 이용해 추정한다.
-   - pred = model(input)
-1. loss를 계산한다.
-   - loss = loss_fn(pred, target)
-1. 계산된 loss를 파라미터에 대해 미분하여 계산한 gradient 값을 각 파라미터에 저장한다.
-   - loss.backward()
-1. optimizer를 이용해 파라미터를 update한다.
-   - optimizer.step()  
-1. 파라미터의 gradient(미분값)을 0으로 초기화한다.
-   - optimizer.zero_grad()
-- 위의 단계를 반복한다.   
-
-
-```python
-import torch
-```
-
-
-```python
-# 돌려봐야지 알아야한다 -> 많이 돌려도 효율이 나쁠수도 있다.
-STEPS = 100 # 파라미터(weight, bias)를 업데이트를 할 횟수
-for _ in range(STEPS):
-    # 1. 추론(예측)
-    pred = linear_model(X_train)
-    # 2. 오차계산
-    loss = mse_loss_fn(pred, y_train)
-    # 3. weight, bias 대한 gradient 계산
-    loss.backward()
-    # 4. 최적화 -> optimizer를 이용. ==> 경사하강법(알고리즘)
-    optimizer.step()
-    # 5. 계산된 gradient 값 초기화
-    optimizer.zero_grad()
-```
-
-
-```python
-### weight, bias 값
-print('weight:', weight)
-print('bias:', bias)
-```
-
-    weight: tensor([[16.2360]], requires_grad=True)
-    bias: tensor([7.0396], requires_grad=True)
-    
-
-
-```python
-### 오차 계산
-pred3 = linear_model(X_train)
-loss3 = mse_loss_fn(pred3, y_train)
-```
-
-
-```python
-# torch.sqrt: 제곱근 구하기
-print(loss3, torch.sqrt(loss3))
-```
-
-    tensor(9.6839, grad_fn=<MeanBackward0>) tensor(3.1119, grad_fn=<SqrtBackward0>)
-    
-
-
-```python
-loss**(1/2)
-```
-
-
-
-
-    tensor(3.1200, grad_fn=<PowBackward0>)
-
-
-
 # 다중 입력, 다중 출력
+
 - 다중입력: Feature가 여러개인 경우
 - 다중출력: Output 결과가 여러개인 경우
 
-다음 가상 데이터를 이용해 사과와 오렌지 수확량을 예측하는 선형회귀 모델을 정의한다.  
-[참조](https://www.kaggle.com/code/aakashns/pytorch-basics-linear-regression-from-scratch)
+가상 데이터를 이용해 사과와 오렌지 수확량을 예측하는 선형회귀 모델 정의
 
 
 |온도(F)|강수량(mm)|습도(%)|사과생산량(ton)|오렌지생산량|
@@ -308,13 +31,10 @@ loss**(1/2)
 - `온도`, `강수량`, `습도` 값이 사과와, 오렌지 수확량에 어느정도 영향을 주는지 가중치를 찾는다.
     - 모델은 사과의 수확량, 오렌지의 수확량 **두개의 예측결과를 출력**해야 한다.
     - 사과에 대해 예측하기 위한 weight 3개와 오렌지에 대해 예측하기 위한 weight 3개 이렇게 두 묶음, 총 6개의 weight를 정의하고 학습을 통해 가장 적당한 값을 찾는다.
-        - 이 묶음을 딥러닝에서는 **Node, Unit, Neuron** 이라고 한다.
-- 목적은 우리가 수집한 train 데이터셋을 이용해 **정확한 예측을 위한 weight와 bias**를 찾는 것이다.
 
 ## Training Data
 - Train data는 feature와 target를 각각 따로 2개의 행렬로 구성한다.
 - Feature의 행은 관측치(개별 데이터)를 열을 Feature(특성, 변수)를 표현한다.
-- Target은 모델이 예측할 대상으로 행은 개별 관측치, 열은 각 항목에 대한 정답으로 이 예제에서는 사과수확량과 오렌지 수확량 값을 가진다.
 
 
 ```python
@@ -346,7 +66,6 @@ targets = torch.tensor([[56, 70],
 ### weight와 bias
 - weight 는 각 feature에 곱해지는 가중치로 target 값에 얼마나 영향을 주는지를 나타낸다. 직선의 방정식에서 기울기이다.
 - bias는 각 feature와 weight간의 가중합에 더해주는 값으로 모든 feature가 0일 경우 target의 값을 나타낸다. 직선의 방정식에서 절편이다.
-- weight와 bias는 각각 random 값을 초기값으로 가지는 matrix로 정의한다.
 - weight의 shape: (2, 3)
 - bias의 shape: (2, ) 
 
@@ -383,7 +102,7 @@ print(bias)
             [-2.1788,  0.5684],
             [-1.0845, -1.3986]], requires_grad=True)
     tensor([0.4033, 0.8380], requires_grad=True)
-    
+
 
 ### Linear Regression model
 모델은 weights `w`와 inputs `x`의 내적(dot product)한 값에 bias `b`를 더하는 간단한 함수이다. 
@@ -460,7 +179,7 @@ pred
 ```
 
     torch.Size([5, 2])
-    
+
 
 
 
@@ -516,7 +235,7 @@ print(weights.grad)
     tensor([[-15400.8271, -11915.3555],
             [-19847.4902, -13088.5010],
             [-11609.1875,  -8220.1104]])
-    
+
 
 
 ```python
@@ -539,7 +258,7 @@ print(bias.grad)
 
     tensor([0.4033, 0.8380], requires_grad=True)
     tensor([-191.2390, -143.3533])
-    
+
 
 ### 모델 최적화
 gradient decent 알고리즘을 이용해 loss를 줄여 모델의 추론 성능을 높인다. 이를 위해 좋은 성능을 낼 수 있도록 **경사하강법(gradient decent)** 을 이용해 weight와 bias를 update한다. 
@@ -591,7 +310,7 @@ for i in range(STEPS):
     Step: 80 - loss:1.7267286777496338
     Step: 90 - loss:1.5235397815704346
     Step: 99 - loss:1.3705735206604004
-    
+
 
 
 ```python
@@ -606,7 +325,7 @@ print(bias)
             [-2.1788,  0.5684],
             [-1.0845, -1.3986]], requires_grad=True)
     tensor([0.4033, 0.8380], requires_grad=True)
-    
+
 
 
 ```python
@@ -621,7 +340,7 @@ print(bias)
             [ 0.8682,  0.8374],
             [ 0.6338,  0.7962]], requires_grad=True)
     tensor([0.3987, 0.8516], requires_grad=True)
-    
+
 
 
 ```python
@@ -690,7 +409,7 @@ targets = torch.tensor([[56, 70],
 
 ## nn.Linear
 Pytorch는 nn.Linear 클래스를 통해 Linear Regression 모델을 제공한다.  
-nn.Linear에 입력 feature의 개수와 출력 값의 개수를 지정하면 random 값으로 초기화한 weight와 bias들을 생성해 모델을 구성한다.
+nn.Linear에 입력 feature의 개수와 출력 값의 개수를 지정하면 random 값으로 초기화한 weight와 bias들을 생성
 
 
 ```python
@@ -710,7 +429,7 @@ print(model.bias)
             [ 0.1234, -0.3761, -0.0296]], requires_grad=True)
     Parameter containing:
     tensor([ 0.4133, -0.0594], requires_grad=True)
-    
+
 
 ## Optimizer와 Loss 함수 정의
 - torch.optim 모듈에 다양한 Optimizer 클래스가 구현되있다. 그 중에서 Adam를 사용한다.
@@ -827,7 +546,7 @@ fit(200, model, loss_fc, optimizer, inputs, targets)
     Step: 180/200: train loss:1.11136
     Step: 190/200: train loss:1.01015
     Step: 199/200: train loss:0.93394
-    
+
 
 
 ```python
@@ -873,5 +592,4 @@ targets
             [119., 133.],
             [ 22.,  37.],
             [103., 119.]])
-
 
