--- a/_posts/07.Deeplearning_Pyorch/04.딥러닝 MLP구현/2023-10-14-01.딥러닝-MLP 구현.md
+++ b/_posts/07.Deeplearning_Pyorch/04.딥러닝 MLP구현/2023-10-14-01.딥러닝-MLP 구현.md
@@ -1,8 +1,8 @@
 ---
 layout: single
-title: '도형 그리기'
+title: 'MNIST 이미지 분류 모델'
 typora-root-url: ../
-categories: Pytorch.04.DeeplearningMLP
+categories: Deeplearning_Pytorch.04.Pytorch 개발 Process
 tag: Pytorch
 toc: true
 ---
@@ -12,20 +12,13 @@ toc: true
 1. **데이터 준비**
     - Dataset 준비
     - Dataloader 생성
-
 2. **입력과 출력을 연결하는 Layer(층)으로 이뤄진 네트워크(모델)을 정의**
     - **Sequential 방식**: 순서대로 쌓아올린 네트워크로 이뤄진 모델을 생성하는 방식
         - layer를 순서대로 쌓은 모델을 구현할때 간단히 모델을 정의할 수 있다.
-        - layer block을 정의하는데 사용할 수 있다.
     - **Subclass 방식**: 네트워크를 정의하는 클래스를 구현. 추론
-        - 다양한 구조의 모델을 정의할 수 있다.
-        - inializer에서 필요한 layer들을 생성한다.
-        - forward(self, X) 메소드에 forward propagation 계산을 구현한다.
-    
 3. **train**
     - train 함수, test 함수 정의
-
-4. test set 최종평가
+4. **test set 최종평가**
 
 # MNIST 이미지 분류 
 - **[MNIST](https://ko.wikipedia.org/wiki/MNIST_%EB%8D%B0%EC%9D%B4%ED%84%B0%EB%B2%A0%EC%9D%B4%EC%8A%A4) (Modified National Institute of Standards and Technology) database**
