--- a/_posts/07.Deeplearning_Pyorch/05.DataSet DataLoader/2023-10-14-05.모델성능 평가를 위한 데이터셋분리.md
+++ b/_posts/07.Deeplearning_Pyorch/05.DataSet DataLoader/2023-10-14-05.모델성능 평가를 위한 데이터셋분리.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: 'Dataset을 이용 CSV파일에 저장된 데이터셋 로딩'
+title: '데이터셋분류'
 typora-root-url: ../
 categories: Deeplearning_Pytorch.05.DatasetDataLoader
 tag: Pytorch
