--- a/_posts/07.Deeplearning_Pyorch/08.CNN_Model 정의/2023-11-01-01.CNN_Model.md
+++ b/_posts/07.Deeplearning_Pyorch/08.CNN_Model 정의/2023-11-01-01.CNN_Model.md
@@ -1,13 +1,13 @@
 ---
 layout: single
-title: 'Boston Housing Dataset 모델'
+title: 'Convolutional Neural Network'
 typora-root-url: ../
 categories: Deeplearning_Pytorch.08.Convolutional Neural Network 모델
 tag: Pytorch
 toc: true
 ---
 
-# Convolutional Neural Network 모델 정의
+# Convolutional Neural Network 모델
 
 
 ```python
@@ -19,7 +19,7 @@ print(device)
 ```
 
     cpu
-    
+
 
 
 ```python
@@ -34,7 +34,7 @@ print(layer)
 ```
 
     Conv2d(4, 2, kernel_size=(3, 3), stride=(1, 1))
-    
+
 
 
 ```python
@@ -46,7 +46,7 @@ feature_map
 ```
 
     torch.Size([1, 2, 1, 1])
-    
+
 
 
 
@@ -81,7 +81,7 @@ bias
 ```
 
     torch.Size([2])
-    
+
 
 
 
@@ -164,8 +164,9 @@ weight
              [[-0.0181, -0.0360, -0.1220],
               [-0.0270,  0.1345,  0.0176],
               [-0.0263, -0.1170,  0.1559]]],
-    
-    
+
+
+​    
             [[[-0.0070,  0.0451, -0.0005],
               [-0.0211, -0.1611,  0.0137],
               [ 0.0635,  0.0836,  0.1595]],
@@ -503,7 +504,7 @@ summary(model, (1, 1, 28, 28))
 
     C:\Users\world\anaconda3\envs\torch\lib\site-packages\torch\nn\functional.py:1345: UserWarning: dropout2d: Received a 2-D input to dropout2d, which is deprecated and will result in an error in a future release. To retain the behavior and silence this warning, please use dropout instead. Note that dropout2d exists to provide channel-wise dropout on inputs with 2 spatial dimensions, a channel dimension, and an optional batch dimension (i.e. 3D or 4D inputs).
       warnings.warn(warn_msg)
-    
+
 
 
 
@@ -566,7 +567,7 @@ result = fit(train_loader, test_loader, model, loss_fn, optimizer, N_EPOCH,
     Epoch[1/1] - Train loss: 0.05659 Train Accucracy: 0.98155 || Validation Loss: 0.04868 Validation Accuracy: 0.98320
     ====================================================================================================
     204.90558528900146 초
-    
+
 
 
 ```python
@@ -582,4 +583,4 @@ result = fit(train_loader, test_loader, model, loss_fn, optimizer, N_EPOCH,
     Epoch[1/1] - Train loss: 0.36133 Train Accucracy: 0.86838 || Validation Loss: 0.38384 Validation Accuracy: 0.86210
     ====================================================================================================
     209.18013167381287 초
-    
+
