--- a/_posts/07.Deeplearning_Pyorch/09.Image_Augmentation/2023-11-01-01.CNN small dataset.md
+++ b/_posts/07.Deeplearning_Pyorch/09.Image_Augmentation/2023-11-01-01.CNN small dataset.md
@@ -1,13 +1,13 @@
 ---
 layout: single
-title: 'Image Augmentation'
+title: 'CNN small dataset'
 typora-root-url: ../
 categories: Deeplearning_Pytorch.09.Image Augmentation
 tag: Pytorch
 toc: true
 ---
 
-# CNN   small datasets 학습
+# CNN small datasets 학습
 
 
 - 학습할 Data의 개수가 많지 않을 때 CNN을 통한 모형 학습이 어려울 수 있음
