--- a/_posts/07.Deeplearning_Pyorch/10.Transfer Learning과 Fine Tuning/2023-11-01.VGGNet Pretrained 모델을 이용해 이미지 분류.md
+++ b/_posts/07.Deeplearning_Pyorch/10.Transfer Learning과 Fine Tuning/2023-11-01.VGGNet Pretrained 모델을 이용해 이미지 분류.md
@@ -1,29 +1,13 @@
 ---
 layout: single
-title: 'Boston Housing Dataset 모델'
+title: 'VGGNet Pretrained 모델을 이용해 이미지 분류'
 typora-root-url: ../
-categories: Deeplearning_Pytorch.10.Transfer Learning과 Fine Tuning 강사님
+categories: Deeplearning_Pytorch.10.Transfer Learning과 Fine Tuning
 tag: Pytorch
 toc: true
 ---
 
-# Pretrained Model
-
-- 다른 목적을 위해 미리 학습된 모델.
-- Pretrained model을 현재 해결하려는 문제에 이용한다.
-    - 이런 방식을 Transfer Learning (전이 학습)이라고 한다.
-    - 보통 Feature Extractor block을 재사용한다.
-
-## Pytorch에서 제공하는 Pretrained Model
-- 분야별 라이브러리에서 제공
-    - torchvision: https://pytorch.org/vision/stable/models.html
-- torch hub 를 이용해 모델과 학습된 parameter를 사용할 수 있다.
-    - https://pytorch.org/hub/
-- 이외에도 많은 모델과 학습된 paramter가 인터넷상에 공개되 있다.    
-    - [paperswithcode](https://paperswithcode.com/)에서 State Of The Art(SOTA) 논문들과 그 구현된 모델을 확인할 수 있다.
->  **State Of The Art(SOTA)**: 특정 시점에 특정 분야에서 가장 성능이 좋은 모델을 말한다.
-
-## VGGNet Pretrained 모델을 이용해 이미지 분류
+# VGGNet Pretrained 모델을 이용해 이미지 분류
 
 - Pytorch가 제공하는 VGG 모델은 ImageNet dataset으로 학습시킨 weight를 제공한다.
     - 120만장의 transet, 1000개의 class로 구성된 데이터셋.
@@ -343,9 +327,8 @@ test_img
 
 
 
-​    
-![png](output_20_0.png)
-​    
+![output_20_0](/../../images/12_Transfer Learning과 Fine tuning 강사님/output_20_0.jpg)
+    
 
 
 
@@ -445,65 +428,12 @@ print("확률:", prob1.item())
 
 
 # Transfer learning (전이학습)
-- 사전에 학습된 신경망의 구조와 파라미터를 재사용해서 새로운 모델(우리가 만드는 모델)의 시작점으로 삼고 해결하려는 문제를 위해 다시 학습시킨다.
 - 전이 학습을 통해 다음을 해결할 수 있다.
     1. 데이터 부족문제
         - 딥러닝은 대용량의 학습데이터가 필요하다.
         - 충분한 데이터를 수집하는 것은 항상 어렵다.
     2. 과다한 계산량
         - 신경망 학습에는 엄청난 양의 계산 자원이 필요하다.
-
-![transfer_learning01](figures/09_transfer_01.png)
-
-- 미리 학습된(pre-trained) Model을 이용하여 모델을 구성한 뒤 현재 하려는 예측 문제를 해결한다.
-- 보통 Pretrained Model에서 Feature Extraction 부분을 사용한다.
-    - Computer Vision 문제의 경우 Bottom 쪽의 Convolution Layer(Feature Extractor)들은 이미지에 나타나는 일반적인 특성을 추출하므로 **다른 대상을 가지고 학습했다고 하더라도 재사용할 수 있다.**
-    - Top 부분 Layer 부분은 특히 출력 Layer의 경우 대상 데이터셋의 목적에 맞게 변경 해야 하므로 재사용할 수 없다.
-
-![transfer_learning02](figures/09_transfer_02.png)
-
-> **Frozon**: Training시 parameter가 update 되지 않도록 하는 것을 말한다.
-
-### Feature extraction 재사용
-- Pretrained Model에서 Feature Extractor 만 가져오고 추론기(Fully connected layer)만 새로 정의한 뒤 그 둘을 합쳐서 모델을 만든다.
-- 학습시 직접 구성한 추론기만 학습되도록 한다.
-    - Feature Extractor는 추론을 위한 Feature 추출을 하는 역할만 하고 그 parameter(weight)가 학습되지 않도록 한다.
-- 모델/레이어의 parameter trainable 여부 속성 변경
-    - model/layer 의 `parameters()` 메소드를 이용해 weight와 bias를 조회한 뒤 `requires_grad` 속성을 `False`로 변경한다.
-      
-#### Backbone, Base network
-전체 네트워크에서 Feature Extraction의 역할을 담당하는 부분을 backbone/base network라고 한다.
-
-## Fine-tuning(미세조정)
-- Transfer Learning을 위한 Pretrained 모델을 내가 학습시켜야 하는 데이터셋(Custom Dataset)으로 **재학습**시키는 것을 fine tunning 이라고 한다.
-- 주어진 문제에 더 적합하도록 Feature Extractor의 가중치들도 조정 한다.
-
-### Fine tuning 전략
-![transfer02](figures/09_transfer_03.png)
-
-- **세 전략 모두 추론기는 trainable로 한다.**
-
-**<font size='5'>1. 전체 모델을 전부 학습시킨다.(1번)</font>**    
-- Pretrained 모델의 weight는 Feature extraction 의 초기 weight 역할을 한다.
-- **Train dataset의 양이 많고** Pretrained 모델이 학습했던 dataset과 Custom dataset의 class간의 유사성이 **낮은 경우** 적용.
-- 학습에 시간이 많이 걸린다.
-  
-    
-
-**<font size='5'>2. Pretrained 모델 Bottom layer들(Input과 가까운 Layer들)은 고정시키고 Top layer의 일부를 재학습시킨다.(2번)</font>**     
-- **Train dataset의 양이 많고** Pretrained 모델이 학습했던 dataset과 Custom dataset의 class간의 유사성이 **높은 경우** 적용.
-- **Train dataset의 양이 적고** Pretained 모델이 학습했던 dataset과 custom dataset의 class간의 유사성이 **낮은 경우** 적용
-  
-    
-
-**<font size='5'>3. Pretrained 모델 전체를 고정시키고 classifier layer들만 학습시킨다.(3번)</font>**      
-- **Train dataset의 양이 적고** Pretrained 모델이 학습했던 dataset과 Custom dataset의 class간의 유사성이 **높은 경우** 적용.
-  
-  
-> **Custom dataset:** 내가 학습시키고자 하는 dataset
-> 1번 2번 전략을 Fine tuning 이라고 한다.
-
-![fine tuning](figures/09_finetuning.png)
 
 
 ```python
@@ -803,7 +733,7 @@ plt.imshow(batch_one[0][30].permute(1,2,0))
 
 
 ​    
-![png](output_59_2.png)
+![output_59_2](/../../images/12_Transfer Learning과 Fine tuning 강사님/output_59_2.png)
 ​    
 
 
