--- a/_posts/07.Deeplearning_Pyorch/08.CNN_Model 정의/2023-11-01-01.CNN_Model.md
+++ b/_posts/07.Deeplearning_Pyorch/08.CNN_Model 정의/2023-11-01-01.CNN_Model.md
@@ -12,7 +12,7 @@ toc: true
 
 ```python
 import torch
-import torch.nn as nn
+import
 
 device = "cuda" if torch.cuda.is_available() else "cpu"
 print(device)
